--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Gás e água de qualidade com entrega rápida e segura em toda São Paulo">
     <title>GásSP - Gás e Água com Qualidade</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -734,4 +734,5 @@
         initProducts();
     </script>
 </body>
+
 </html>
