--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@
             height: 16rem;
             object-fit: cover;
         }
+
+        input, select, textarea {
+  font-size: 16px !important;
+}
     </style>
 </head>
 <body>
@@ -736,3 +740,4 @@
 </body>
 
 </html>
+
